# Voice2Text

./: .gitignore  README.md
app/: README.md  requirements-stt-extra.txt  requirements-translation-extra.txt
app/native/audio_bridge/: CMakeLists.txt  README.md
app/native/audio_bridge/src/: discovery.cpp  discovery.h  loopback_capture.cpp  loopback_capture.h  main.cpp
app/sandbox/: pseudo.py
app/scripts/diagnostics/: app_source_visual_probe.py  compare_test_data_whisperx.py  diarization_device_bench.py  main_replay_regression.py  offline_speaker_reclustering_probe.py  run_provider_runtime_matrix.py  run_quality_baseline.py  segment_arrival_regression_test.py  session_record_replay_validation.py  smoke_switch_test.py  speaker_mechanism_smoke.py  spk_accuracy_vs_truth.py  spk_char_distribution.py  srt_to_line_txt.py  subtitle_correctness_check.py  whisperx_alignment_stability_test.py  whisperx_diarization_readiness_check.py  whisperx_diarization_stability_test.py
app/src/: main.py
app/src/app/: __init__.py  audio_capture.py  bootstrap.py  bootstrap_args.py  bootstrap_config.py  bootstrap_runtime.py  config.py  controller.py  debug_window.py  logging_utils.py  model_paths.py  overlay_window.py  settings_dialog.py  settings_persistence.py  status_routing.py  translator.py  tray_controller.py  whisper_config.py
app/src/app/capture/: __init__.py  bridge_probe.py  cpp_backend.py  factory.py  mixer_utils.py  session_match.py  session_recorder.py
app/src/app/pipeline/: audio_windowing.py  gpu_telemetry.py  language_routing.py  segment_artifacts.py  subtitle_assembler.py  timing_stats.py  transcript_exporter.py  transcription_loop.py
app/src/app/settings/: i18n.py  mapping.py  presenter.py  presets.py  schema.py  source_selection_dialog.py  widgets.py
app/src/app/stt/: audio_utils.py  base.py  factory.py  funasr_provider.py  healthcheck.py  model_assets.py  model_cache.py  model_download.py  preprocessing.py  profile_quality.py  registry.py  riva_provider.py  speaker_identity.py  speaker_profiles.py  vad.py  vosk_provider.py  whisper_provider.py  whispercpp_common.py  whisperx_provider.py
app/src/app/translation/: __init__.py  argos_backend.py  engine.py  nllb_backend.py  registry.py
app/src/tests/: __init__.py  test_align_guard_switch.py  test_alignment_dynamic_discovery_integration.py  test_alignment_model_defaults_migration.py  test_asr_temperature_options.py  test_audio_preprocessing.py  test_bootstrap_runtime_crash_bundle.py  test_compare_direct_chunking.py  test_controller_direct_import.py  test_controller_model_label.py  test_cpp_backend_multi_app.py  test_cpu_preset.py  test_crash_bundle.py  test_debug_window.py  test_diagnostics_dialogs.py  test_dialog_window_flags.py  test_diarization_speaker_hint_config.py  test_diarization_speaker_hints.py  test_direct_transcription.py  test_direct_whole_file_diarization.py  test_gpu_telemetry_summary.py  test_healthcheck_checks.py  test_language_defaults.py  test_language_routing.py  test_live_committed_raw_boundary.py  test_llm_translation_backend.py  test_logging_utils.py  test_model_cache.py  test_model_download_progress.py  test_model_resolution.py  test_nllb_backend.py  test_profile_quality.py  test_profile_readonly_match.py  test_quality_baseline.py  test_runtime_presets.py  test_sensitive_logging.py  test_session_finalize_direct_relabel.py  test_session_recorder.py  test_settings_dialog_alignment_defaults.py  test_settings_mapping_live_knobs.py  (+35 more)
app/src/voice2text/: bootstrap.py  bootstrap_args.py  bootstrap_config.py  bootstrap_runtime.py  config.py  controller.py  crash_bundle.py  cuda_compat.py  diagnostics_dialogs.py  language_defaults.py  logging_utils.py  settings_dialog.py  settings_persistence.py  translator.py  tray_controller.py
app/src/voice2text/capture/: cpp_backend.py  discovery.py  session_recorder.py
app/src/voice2text/pipeline/: direct_transcription.py  subtitle_assembler.py  timing_stats.py  transcript_exporter.py  transcription_loop.py
app/src/voice2text/settings/: i18n.py  mapping.py  presenter.py  presets.py  schema.py  widgets.py
app/src/voice2text/stt/: align_cuda_probe.py  align_probe_cache.py  factory.py  model_download.py  model_resolution.py  registry.py  speaker_identity.py  speaker_profiles.py  whispercpp_common.py  whispercpp_diarization.py  whispercpp_provider.py  whispercpp_runtime.py  whispercpp_server.py  whisperx_provider.py
app/src/voice2text/translation/: argos_backend.py  base.py  llm_backend.py  registry.py
cpp_app/: CMakeLists.txt  README.md  build.ps1  run_msvc_gpu_build.cmd
cpp_app/src/: app_controller.cpp  app_controller.h  main.cpp  runtime_logger.cpp  runtime_logger.h  settings_dialog.cpp  settings_dialog.h  subtitle_overlay_window.cpp  subtitle_overlay_window.h  tray_controller.cpp  tray_controller.h  whisper_config.cpp  whisper_config.h  whisper_config.json
cpp_app/src/audio/: discovery.cpp  loopback_capture.cpp  loopback_capture.h
cpp_app/src/runtime/: runtime_settings.cpp  runtime_settings.h  runtime_update.cpp  runtime_update.h
cpp_app/src/settings/: i18n.cpp  i18n.h  mapping.cpp  mapping.h
cpp_app/src/stt/: whisper_engine.cpp  whisper_engine.h
cpp_app/src/translation/: translation_engine.cpp  translation_engine.h
cpp_app/tools/: argos_translate_bridge.py
docs/: README.md
docs/agents/: git-workflow.md
docs/tasks/: README.md
python_app/: README.md  requirements.txt
python_app/src/: main.py
python_app/src/app/: __init__.py  audio_capture.py  bootstrap.py  config.py  controller.py  cuda_compat.py  debug_window.py  logging_utils.py  model_paths.py  overlay_window.py  settings_dialog.py  status_routing.py  transcriber.py  translator.py  tray_controller.py  whisper_config.py
python_app/src/app/capture/: __init__.py  discovery.py  factory.py
python_app/src/app/pipeline/: runtime_recovery.py  subtitle_assembler.py  text_delta_logger.py
python_app/src/app/settings/: i18n.py  mapping.py  schema.py
python_app/src/app/stt/: __init__.py  audio_utils.py  base.py  factory.py  healthcheck.py  model_download.py  registry.py  vad.py  (+3 more)
